--- a/deployment.yml
+++ b/deployment.yml
@@ -1,35 +1,21 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
-    name: abc-tech-app
+  name: abc-tech-app
+  labels:
+    app: abc-tech-app
 spec:
-    replicas: 2
-    minReadySeconds: 45
-    strategy:
-        type: RollingUpdate
-        rollingUpdate:
-            maxUnavailable: 1
-            maxSurge: 2
-    selector:
-        matchLabels:
-            app: abc-tech-app
-    template:
-        metadata:
-            labels:
-                app: abc-tech-app
-        spec:
-            containers:
-                - image: iambowcreek/abc_technologies:latest
-                  name: app
----
-kind: Service
-apiVersion: v1
-metadata:
-    name: abc-tech-app-services
-spec:
-    type: NodePort
-    selector:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: abc-tech-app
+  template:
+    metadata:
+      labels:
         app: abc-tech-app
-    ports:
-        - port: 80 #cluster port
-          targetPort: 8080 #container image port
+    spec:
+      containers:
+      - name: abc-tech-app
+        image: iambowcreek/abc_technologies:latest
+        ports:
+        - containerPort: 80
