deployment file updated and committed

--- a/deployment1.yml
+++ b/deployment1.yml
@@ -32,5 +32,5 @@ spec:
         app: abc-tech-app
     ports:
         - port: 80 #cluster port
-          targetPort: 30080 #container image port
-          
+          targetPort: 8080 #container image port
+          nodePort: 30080
